// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuBar renders 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Help
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Contact
        </button>
      </li>
      <button
        class="menu-upgrade button-tertiary"
      >
        <img
          alt="Streetmix+"
          class="menu-avatar-badge menu-avatar-subscriber"
          src="test-file-stub"
        />
        Get Streetmix+‎
      </button>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <a
          href="/new"
          target="_blank"
        >
          New street
        </a>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Settings
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Share
        </button>
      </li>
      <li>
        <button
          class="menu-sign-in button-primary"
        >
          Sign in
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`MenuBar renders logged in user 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Help
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Contact
        </button>
      </li>
      <button
        class="menu-upgrade button-tertiary"
      >
        <img
          alt="Streetmix+"
          class="menu-avatar-badge menu-avatar-subscriber"
          src="test-file-stub"
        />
        Get Streetmix+‎
      </button>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <a
          href="/new"
          target="_blank"
        >
          New street
        </a>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Settings
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Share
        </button>
      </li>
      <li>
        <button
          class="menu-attached menu-avatar"
        >
          <span
            class="avatar"
          >
            <img
              alt="foo"
            />
          </span>
          <span
            class="user-id"
          >
            foo
          </span>
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`MenuBar renders minimal menu in offline mode 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Help
        </button>
      </li>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <a
          href="/new"
          target="_blank"
        >
          New street
        </a>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Settings
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Share
        </button>
      </li>
    </ul>
    <div
      class="environment-badge environment-label-demo"
    >
      Demo
    </div>
  </nav>
</DocumentFragment>
`;

exports[`MenuBar renders upgrade funnel and handles click 1`] = `
<DocumentFragment>
  <nav
    class="menu-bar"
  >
    <ul
      class="menu-bar-left"
    >
      <li
        class="menu-bar-title"
      >
        <img
          alt="Streemix"
          class="menu-bar-logo"
          src="test-file-stub"
        />
        <h1>
          Streetmix
        </h1>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Help
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Contact
        </button>
      </li>
      <button
        class="menu-upgrade button-tertiary"
      >
        <img
          alt="Streetmix+"
          class="menu-avatar-badge menu-avatar-subscriber"
          src="test-file-stub"
        />
        Get Streetmix+‎
      </button>
    </ul>
    <ul
      class="menu-bar-right"
    >
      <li>
        <a
          href="/new"
          target="_blank"
        >
          New street
        </a>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Settings
        </button>
      </li>
      <li>
        <button
          class="menu-attached"
        >
          Share
        </button>
      </li>
      <li>
        <button
          class="menu-sign-in button-primary"
        >
          Sign in
        </button>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
